css mailto alignment correction

--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -132,9 +132,10 @@ p
 			font-size: 0.9em
 
 	.three
-		width: calc(210px - 40px)
+		width: calc(210px - 28px)
 		height: calc(176px - 40px)
 		top: 0
+		padding: 20px 12px 20px 16px
 		left: 770px
 		background-image: url("assets/media/meldaan.png")
 		background-position: cover
